<resources>
    <string name="app_name">MS-Challenge</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="app_author_name">YenHsun, Huang</string>

    <!-- schedule activity -->
    <string name="schedule_activity_hint_title">Title</string>
    <string name="schedule_activity_whole_day">Whole day</string>
    <string name="schedule_start_date">Start date</string>
    <string name="schedule_finish_date">Finish date</string>
    <string name="schedule_location_hint">Location</string>
    <string name="schedule_notify">Notify</string>
    <string name="schedule_member">Member</string>
    <string name="schedule_description">Description</string>
    <string name="schedule_new_event">New event</string>
    <string name="schedule_cancel_confirm_dialog_title">Warning</string>
    <string name="schedule_cancel_confirm_dialog_message">Do you want to cancel this new event?</string>
    <string name="schedule_cancel_confirm_dialog_message_update">Do you want to cancel this update?</string>
    <string name="schedule_cancel_confirm_dialog_negative">Return</string>
    <string name="schedule_remove_item">Delete</string>
    <string name="schedule_remove_confirm_dialog_message">Do you want to delete this event?</string>

    <string-array name="schedule_notify_time_list">
        <item>Do not notify</item>
        <item>When event start</item>
        <item>Before 5 minutes</item>
        <item>Before 10 minutes</item>
        <item>Before 15 minutes</item>
        <item>Before 30 minutes</item>
        <item>Before 1 hour</item>
    </string-array>

    <string-array name="schedule_notify_start_time">
        <item>""</item>
        <item>Now</item>
        <item>5 minutes later</item>
        <item>10 minutes later</item>
        <item>15 minutes later</item>
        <item>30 minutes later</item>
        <item>1 hour later</item>
    </string-array>

    <!-- agenda view-->
    <string name="agenda_view_yesterday">Yesterday</string>
    <string name="agenda_view_today">Today</string>
    <string name="agenda_view_tomorrow">Tomorrow</string>
    <string name="agenda_view_no_event">No event</string>
    <string name="agenda_view_morning">Morning</string>
    <string name="agenda_view_afternoon">Afternoon</string>
    <string name="agenda_view_night">Night</string>

    <!-- calendar activity -->
    <string name="calendar_activity_add_schedule_success">Add schedule successfully</string>
    <string name="calendar_activity_update_schedule_success">Update schedule successfully</string>
    <string name="calendar_activity_remove_schedule_success">Remove schedule successfully</string>

    <!-- view schedule dialog -->
    <string name="view_schedule_dialog_edit">Edit</string>
    <string name="view_schedule_dialog_read_more">…read more</string>

    <!-- permission dialog -->
    <string name="permission_dialog_location_title">Enable location</string>
    <string name="permission_dialog_location_message">Enable location for more fabulous functions for you!</string>

    <!-- preference -->
    <string name="preference_about_category_about_me">About me</string>
    <string name="preference_about_me_name">Name</string>
    <string name="preference_about_me_summary">@string/app_author_name</string>
    <string name="preference_about_me_linkedin_page">LinkedIn page</string>
    <string name="preference_about_me_github">Github page</string>
    <string name="preference_about_me_facebook">Facebook page</string>
    <string name="preference_about_me_email">Email address</string>
    <string name="preference_about_me_email_summary">s011208@gmail.com</string>
    <string name="preference_about_me_email_subject">Hi YenHsun, I would like to contact with you</string>
    <string name="preference_about_me_email_text">Yahoo, I am in your setting page!</string>
    <string name="preference_about_me_failed_to_start_browser">Failed to start browser</string>

    <!-- current weather fragment -->
    <string name="current_weather_fragment_current_weather">Current weather</string>
</resources>
