<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bj4.yhh.mschallenge.CalendarActivity"
    tools:showIn="@layout/app_bar_calendar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:completionThreshold="1"
                android:drawableLeft="@drawable/add_schedule_title_drawable"
                android:drawablePadding="@dimen/schedule_drawable_padding"
                android:hint="@string/schedule_activity_hint_title"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:singleLine="true"
                android:textColor="@color/primary_text_color_schedule"
                android:textColorHint="@color/secondary_text_color_schedule"
                android:textSize="@dimen/schedule_primary_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/schedule_text_padding_without_icon"
                android:background="@color/separator_color_schedule" />

            <RelativeLayout
                android:id="@+id/whole_day_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:padding="@dimen/schedule_item_padding">

                <Switch
                    android:id="@+id/whole_day_switcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/whole_day_switcher"
                    android:drawableLeft="@drawable/ic_clock_grey600_24dp"
                    android:drawablePadding="@dimen/schedule_drawable_padding"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/schedule_activity_whole_day"
                    android:textColor="@color/primary_text_color_schedule"
                    android:textSize="@dimen/schedule_primary_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:padding="@dimen/schedule_item_padding">

                <TextView
                    android:id="@+id/start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:minEms="3"
                    android:minHeight="?android:attr/listPreferredItemHeight"
                    android:text="00:00"
                    android:textColor="@color/primary_text_color_schedule"
                    android:textSize="@dimen/schedule_primary_text_size" />

                <LinearLayout
                    android:id="@+id/start_date_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/schedule_text_margin_without_icon"
                    android:layout_toLeftOf="@+id/start_time"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:minHeight="?android:attr/listPreferredItemHeight"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/schedule_start_date"
                        android:textColor="@color/secondary_text_color_schedule"
                        android:textSize="@dimen/schedule_secondary_text_size" />

                    <TextView
                        android:id="@+id/start_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text_color_schedule"
                        android:textSize="@dimen/schedule_primary_text_size" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:padding="@dimen/schedule_item_padding">

                <TextView
                    android:id="@+id/finish_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:minEms="3"
                    android:minHeight="?android:attr/listPreferredItemHeight"
                    android:text="10:00"
                    android:textColor="@color/primary_text_color_schedule"
                    android:textSize="@dimen/schedule_primary_text_size" />

                <LinearLayout
                    android:id="@+id/finish_date_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/schedule_text_margin_without_icon"
                    android:layout_toLeftOf="@+id/finish_time"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:minHeight="?android:attr/listPreferredItemHeight"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/schedule_finish_date"
                        android:textColor="@color/secondary_text_color_schedule"
                        android:textSize="@dimen/schedule_secondary_text_size" />

                    <TextView
                        android:id="@+id/finish_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text_color_schedule"
                        android:textSize="@dimen/schedule_primary_text_size" />
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/schedule_text_padding_without_icon"
                android:background="@color/separator_color_schedule" />

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_map_marker_grey600_24dp"
                android:drawablePadding="@dimen/schedule_drawable_padding"
                android:hint="@string/schedule_location_hint"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:singleLine="true"
                android:textColor="@color/primary_text_color_schedule"
                android:textColorHint="@color/secondary_text_color_schedule"
                android:textSize="@dimen/schedule_primary_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/schedule_text_padding_without_icon"
                android:background="@color/separator_color_schedule" />

            <RelativeLayout
                android:id="@+id/notify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:minHeight="?android:attr/listPreferredItemHeight">

                <TextView
                    android:id="@+id/notify_result"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:maxLines="1"
                    android:minHeight="?android:attr/listPreferredItemHeight"
                    android:textColor="@color/primary_text_color_schedule"
                    android:textSize="@dimen/schedule_primary_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/notify_result"
                    android:drawableLeft="@drawable/ic_bell_grey600_24dp"
                    android:drawablePadding="@dimen/schedule_drawable_padding"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:maxLines="1"
                    android:minHeight="?android:attr/listPreferredItemHeight"
                    android:padding="@dimen/schedule_item_padding"
                    android:text="@string/schedule_notify"
                    android:textColor="@color/primary_text_color_schedule"
                    android:textSize="@dimen/schedule_primary_text_size" />
            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/schedule_text_padding_without_icon"
                android:background="@color/separator_color_schedule" />

            <TextView
                android:id="@+id/member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:drawableLeft="@drawable/ic_account_multiple_grey600_24dp"
                android:drawablePadding="@dimen/schedule_drawable_padding"
                android:gravity="center_vertical"
                android:lines="1"
                android:maxLines="1"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:padding="@dimen/schedule_item_padding"
                android:text="@string/schedule_member"
                android:textColor="@color/primary_text_color_schedule"
                android:textSize="@dimen/schedule_primary_text_size"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/schedule_text_padding_without_icon"
                android:background="@color/separator_color_schedule"
                android:visibility="gone" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:drawableLeft="@drawable/ic_library_books_grey600_24dp"
                android:drawablePadding="@dimen/schedule_drawable_padding"
                android:gravity="center_vertical"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:padding="@dimen/schedule_item_padding"
                android:text="@string/schedule_description"
                android:textColor="@color/primary_text_color_schedule"
                android:textSize="@dimen/schedule_primary_text_size" />

            <View
                android:id="@+id/delete_schedule_sep"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/schedule_text_padding_without_icon"
                android:background="@color/separator_color_schedule"
                android:visibility="gone" />

            <TextView
                android:id="@+id/delete_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:padding="@dimen/schedule_item_padding"
                android:text="@string/schedule_remove_item"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/schedule_primary_text_size"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
